<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text=""
        android:textSize="50sp"
        android:ellipsize="start"
        android:gravity="end"
        android:textColor="@color/colorGray"
        android:singleLine="true"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"/>

    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text=""
        android:textSize="60sp"
        android:ellipsize="start"
        android:gravity="end"
        android:textColor="@color/colorWhite"
        android:singleLine="true"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/c"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/btnLeftB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kurung_buka1"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/btnRightB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kurung_buka2"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bagi"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorPurple"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/angka_1"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/angka_2"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/angka_3"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kali"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorPurple"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/angka_4"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/angka_5"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/angka_6"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/kurang"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorPurple"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/angka_7"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>
            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/angka_8"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/angka_9"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tambah"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorPurple"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/angka_00"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/angka_0"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <Button
                android:id="@+id/btnDot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/koma"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/colorGray"
                android:stateListAnimator="@null"
                android:background="@drawable/ripple_effect"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnEqual"
                    android:layout_width="78dp"
                    android:layout_height="78dp"
                    android:layout_margin="2dp"
                    android:text="@string/sama_dengan"
                    android:textSize="16sp"
                    android:textColor="@color/colorWhite"
                    android:stateListAnimator="@null"
                    android:background="@drawable/btn_equal_bg"/>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>